hphp/hack/test/typecheck/const_attribute/static/abstract/abstract_parent_concrete_class.php.exp
File "abstract_parent_concrete_class.php", line 9, characters 7-7:
This class must be declared abstract, or provide an implementation for the abstract property '$l' (Typing[4047])
File "abstract_parent_concrete_class.php", line 6, characters 26-28:
Declaration is here
File "abstract_parent_concrete_class.php", line 9, characters 7-7:
This class must be declared abstract, or provide an implementation for the abstract property '$p' (Typing[4047])
File "abstract_parent_concrete_class.php", line 5, characters 38-40:
Declaration is here
