hphp/hack/test/typecheck/const_attribute/static/abstract/abstract_parent_concrete_class.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

abstract class A {
  <<__Const>> abstract public static int $p;
  abstract public static int $l;
}

class B extends A {

}
